BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/CH_CampaignMember__c.object-meta.xml
<CustomObject>
    <label>CH - Campaign Member</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome CH - Campaign Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Campaign Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>