BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_AccNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_AccNDG__c</fullName>
    <formula>CRM_Account__r.CRM_NDG__c</formula>
    <label>NDG</label>
    <type>Text</type>
</CustomField>