BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Campaign Member</relationshipLabel>
    <relationshipName>CH_Campaign_Member</relationshipName>
    <type>Lookup</type>
</CustomField>