BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CRM_CampaignName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome campagna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>