BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_CodiceAzioneUtente__c.field-meta.xml
<CustomField>
    <fullName>CRM_CodiceAzioneUtente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Azione Utente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>