BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_DataEsitazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataEsitazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Esitazione</label>
    <type>Date</type>
</CustomField>