BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_DataFineAzione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataFineAzione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Fine Azione</label>
    <type>Date</type>
</CustomField>