BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Esito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Esito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>