BPER/DEVF/force-app/main/default/objects/CH_CampaignMember__c/fields/CRM_TipologiaCampagna__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipologiaCampagna__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>